# Evolutionary-Algorithms-Metric

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
evp/: calculator.py  evaluator.py  plotter.py  strategy.py
evp/algos/: GA.py  algorithm_interface.py  cmaes.py
evp/funcs/: radar.py
notebooks/: utils.py
notebooks/results/: cma-es.pkl  ga.pkl
